<resources>
    <string name="app_name">EletriCarApp</string>
    
    <string name="preco_Km">Preço Kw/h</string>
    <string name="km_percorrido">KM percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="todo">TODO</string>
    <string name="digite_valores_validos">Digite valores validos</string>
    <string name="todo1">TODO</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="r_300_000_00">R$ 300.000.00</string>
    <string name="_300_kw_h">300 KW/h</string>
    <string name="_300_cv">300 CV</string>
    <string name="_23_min">23 min</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="todo2">TODO</string>
    <string name="foto_calculo">Foto calculo</string>
    <string name="internet_no_disponivel">Internet não disponivel</string>
    <string name="saved_calc">saved_calc</string>
    <string name="imagem_do_carro">Imagem do Carro</string>
    <string name="imagem_do_favorito">Imagem do Favorito</string>
    <string name="empitystate">EmpityState</string>
    =======
    >>>>>>> parent of 32031db (Implementação tela de CalculoAutonomia.kt e apresentação do calculo
    para o usuario)
</resources>