<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card1"
        android:layout_width="374dp"
        android:layout_height="277dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80EDE9E9">


            <ImageView
                android:id="@+id/iv_carro1"
                android:layout_width="248dp"
                android:layout_height="87dp"
                android:layout_marginTop="16dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.118"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/car" />

            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/preco"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_carro1" />

            <TextView
                android:id="@+id/tv_bateria"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/bateria"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

            <TextView
                android:id="@+id/tv_potencia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/potencia"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/recarga"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />

            <TextView
                android:id="@+id/tv_preco_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/r_300_000_00"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.157"
                app:layout_constraintStart_toEndOf="@+id/tv_preco"
                app:layout_constraintTop_toTopOf="@+id/tv_preco" />


            <TextView
                android:id="@+id/tv_bateria_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300_kw_h"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.146"
                app:layout_constraintStart_toEndOf="@+id/tv_bateria"
                app:layout_constraintTop_toTopOf="@+id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/_300_cv"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.131"
                app:layout_constraintStart_toEndOf="@+id/tv_potencia"
                app:layout_constraintTop_toTopOf="@+id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/_23_min"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toEndOf="@+id/tv_recarga"
                app:layout_constraintTop_toTopOf="@+id/tv_recarga"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/iv_favorite"
                android:layout_width="50dp"
                android:layout_height="43dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.768"
                app:layout_constraintStart_toEndOf="@+id/iv_carro1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_star_border_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>