<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.CalculoAutonomia">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="23dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:contentDescription="@string/_23_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <EditText
            android:id="@+id/et_preco_autonomia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/preco_Km"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_resultato_calculo" />

        <EditText
            android:id="@+id/et_Km_percorrido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/km_percorrido"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_preco_autonomia"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_CalculoAutonomia"
            android:layout_width="194dp"
            android:layout_height="74dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="32dp"
            android:padding="19dp"
            android:text="@string/calcular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Km_percorrido"
            app:layout_constraintVertical_bias="0.307" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="260dp"
            android:layout_height="193dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_close"
            app:srcCompat="@drawable/car" />

        <TextView
            android:id="@+id/tv_resultato_calculo"
            android:layout_width="225dp"
            android:layout_height="41dp"
            android:layout_marginTop="25dp"
            android:textAlignment="center"
            android:textColor="#FF6E40"
            android:textSize="35sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.469"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>